RPI/RPIimage/Image/aarch64/README
VERSION: :1,$s/2025-09-18/2025-09-18/g
ISO:     :1,$s/20250829163109Z/20250829163109Z/g
NetBSD:  :1,$s/11.99.1/11.99.1/g
PKGSRC:  :1,$s/2022/2022/
# Check MD5 filename before post this mail.
# why dont we take off alone.

To: port-armNetBSD.org@localhost
Subject: 2025-09-18-netbsd-raspi-aarch64.img
From: Jun Ebihara <jun@soum.co.jp>

I've updated 2025-09-18-netbsd-raspi-aarch64.img.gz for RPI4.

https://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/2025-09-18-aarch64/2025-09-18-netbsd-raspi-aarch64.img.gz
https://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/2025-09-18-aarch64/MD5

Topics:
- PROBLEM: sdmmc1: couldn't enable card: 60
can't read MicroSD card.

on nyftp daily build:
 20250829163109Z OK (This image)
 20250908130616Z or later NG

- dillo build failed:
checking whether the C compiler works... no
configure: error: in '/mnt/aarch64/pkgsrc/www/dillo/work.aarch64/dillo-3.2.0':
configure: error: C compiler cannot create executables
See 'config.log' for more details
*** Error code 77

- libreoffice build failed:
1. pkgsrc/misc/libreoffice/work.aarch64/libreoffice-25.2.4.3/workdir/UnpackedTarball/pdfium/core/fxcrt/numerics/safe_conversions.h:43:32: warning: unused parameter 'value' [-Wunused-parameter]
   43 |   static constexpr bool Do(Src value) {
      |                            ~~~~^~~~~
gmake: *** [Makefile:178: Executable_gengal] Error 2
*** Error code 2

2. libreoffice-25.2.4.3/workdir/UnpackedTarball/pdfium/core/fpdfdoc/cpdf_bafontmap.cpp 

  ByteString sAlias;
//  RetainPtr<CPDF_Font> pFont =
//      bFind ? FindFontSameCharset(&sAlias, nCharset) : nullptr;
  RetainPtr<CPDF_Font> pFont;
  if (!bFind) {
    pFont = FindFontSameCharset(&sAlias, nCharset);
  }       
  if (!pFont) {
    pFont = AddFontToDocument(sFontName, nCharset);
    sAlias = EncodeFontAlias(sFontName, nCharset);
  }

3. libreoffice/work.aarch64/libreoffice-25.2.4.3/workdir/UnpackedTarball/pdfium/core/fpdfdoc/cpdf_bafontmap.cpp:283:12: error: could not convert 'nullptr' from 'std::nullptr_t' to 'fxcrt::RetainPtr<CPDF_Font>'
  283 |     return nullptr;
  
  //  if (!pFontDict)
  //    return nullptr;
 
- add net/nanotodon
  Nanotodon is a light-weight CUI/C99 mastodon client.

arm64$ nanotodon
Hello! Welcome to nanotodon!
First, Please tell me the server where you live.
(https://[please enter this part]/)
>social.mikutter.hachune.net

Next, I will do application authentication.
Please access to following URL, then after authorization, please input displayed authorization code.
https://social.mikutter.hachune.net/oauth/authorize?client_id=XXX...
> [input authorization code]
 :

- for RPI5: 
1. Download RPI5-D0v1
 https://github.com/NumberOneGit/rpi5-uefi/releases/tag/v0.1
 Download RPI5_D0.zip 
 
2. Extract  RPI5_D0.zip with msdos format MicroSD 
 mount_msdos -l /dev/sd0e /mnt
 cd /mnt
 7z e RPI5_D0.zip

3. copy this RPI4 image to USB disk

4. Connect RPI5:
 MicroSD:(RPI5_D0)
 USB disk(RPI4 image)
 USB Keyboard/Mouse
 HDMI

5. Connect Power Supply and boot comes are you are,as you were.

dmesg:
 https://dmesgd.nycbug.org/dmesgd?do=view&id=8519

- [Test] Firmware update /boot/fixup4*.dat,start4*.elf
commit 95be71b8c0f63f03dc06dd0e4c2e5535e6fb4a93 (HEAD -> master, origin/master, origin/HEAD)
Author: Dom Cobley <popcornmix@gmail.com>
Date:   Fri Aug 1 13:22:52 2025 +0100

- SD/MMC Configration
  Switch Default uSD/eMMC Routing: Arasan SDHCI -> EMMC2
 http://mail-index.netbsd.org/port-arm/2021/08/08/msg007393.html
  the Arasan SDHCI is used to connect bwfm(4). 

In this image, a synbolic link added

/libdata/firmware/if_bwfm:
ln -s brcmfmac43455-sdio.raspberrypi,4-model-b.txt "brcmfmac43455-sdio.Raspberry Pi 4 Model B.txt"
to avoid
bwfm0: autoconfiguration error: NVRAM file not available
 
- only for RPI4 
  (fill dtb for RPI3?)
- build script
 https://github.com/ebijun/NetBSD/tree/master/RPI/RPIimage/Image/aarch64
- [Issue] Can't recognize DOS partition from Windows
  Should I Use MBR version image?

- rpi cm4 + waveshare mini base board B seems stop after kernel load
  fixed: To use USB,set UEFI+FDT 
  http://mail-index.netbsd.org/port-arm/2021/06/30/msg007343.html
  http://mail-index.netbsd.org/port-arm/2022/10/03/msg007875.html

- pkgin support
  edit /usr/pkg/etc/pkgin/repositories.conf
  cf.
  http://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/aarch64/2024
  and pkgin update

sysinfo:
 sh-20220122-20250829163109Z

pkgsrc:
 MesaLib-21.3.9nb5 cairo-1.18.4nb1 curl-8.16.0 fltk-1.4.4 fontconfig-2.17.1
 gd-2.3.3nb16 gdk-pixbuf2-2.42.12nb4 git-base-2.51.0 glib2-2.84.4
 gtk2+-2.24.33nb33 gtk3+-3.24.50nb1 harfbuzz-11.4.5 icewm-3.9.0 imlib2-1.12.3nb4
 lerc-4.0.0 libLLVM-13.0.1nb4 libcups-2.4.12nb1 libelf-0.8.13nb1
 libepoxy-1.5.10nb2 libgcrypt-1.11.2 libjpeg-turbo-3.1.2 libva-2.22.0
 libwebp-1.6.0nb1 m17n-lib-1.8.0nb23 medit-1.2.0nb40 mlterm-3.9.4nb3
 nghttp2-1.67.0 pcre2-10.46 qt5-qtbase-5.15.17nb1 raqm-0.10.3 ruby32-atk-4.3.3
 ruby32-base-3.2.9 ruby32-cairo-gobject-4.3.3 ruby32-gdk3-4.3.3
 ruby32-gdk_pixbuf2-4.3.3 ruby32-gio2-4.3.3 ruby32-glib2-4.3.3
 ruby32-gobject-introspection-4.3.3 ruby32-gtk3-4.3.3 ruby32-mikutter-5.1.1nb4
 ruby32-nokogiri-1.18.9 ruby32-pango-4.3.3 ruby32-pkg-config-1.6.3 sayaka-3.8.4
 tiff-4.7.0nb3 uim-1.8.9nb20 wayland-1.23.0nb7
RPI4 status:
- boot via UEFI_VER=v1.42
  https://github.com/pftf/RPi4/releases

In this image,pre-setted /boot/RPI_EFI.fd
1. Advanced Configration
 -> Limit RAM to 3GB	Disabled
2. Boot order, from microSD

- HDMI: works
- audio: vcaudio
  http://mail-index.netbsd.org/source-changes-d/2021/01/22/msg013133.html
- USB device: works
- bwfm0 Wireless network:?
  (works well on RPI3,not works on RPI4?)
- Pi 4 Bootloader Configuration
  https://www.raspberrypi.org/documentation/hardware/raspberrypi/bcm2711_bootloader_config.md

Update:
- NetBSD-current 11.99.1 evbarm-aarch64 20250829163109Z arm64.img from nyftp.
- pkginfo
 https://github.com/ebijun/NetBSD/blob/master/RPI/RPIimage/Image/aarch64/pkginfo
- sysinfo
 https://github.com/ebijun/NetBSD/blob/master/RPI/RPIimage/Image/aarch64/sysinfo

Update from 2022-06:
https://github.com/ebijun/NetBSD/commit/1b3ef330ecf023aa73d58ccb8b4029c520f33cdf

- mate/firefox/inkscape/libreoffice works well
   pkg_add mate
   pkg_add gvfs
   pkg_add firefox
   pkg_add firefox-l10n
   pkg_add libreoffice
   pkg_add inkscape
   pkg_add gimp
   pkg_add scribus
   pkg_add py312-sphinx
   pkg_add wxGTK32
   pkg_add gnome-keyring

   /root/.xinitrc 
   #mate-session; exit <-- uncomment this line & startx to test mate desktop

- Sphinx with latexpdf
  https://github.com/ebijun/NetBSD/blob/master/Guide/latexpdf.rst 

- pkgin: upgrade failed
- raspberry-pi userland: compile failed 

Pre-installed packages:
  bash
  tcsh
  vlgothic-ttf
  icewm
  xli
  ruby32-mikutter
  uim
  fossil
  sudo
  git-base
  zsh
  mlterm
  pkg_chk
  lintpkgsrc
  mozilla-rootcerts
  dillo
  medit
  lrzsz
  sayaka

- pre-build packages:
  See /etc/pkg_install.conf
  PKG_PATH=http://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/aarch64/2025/

pkgsrc: 
  # cd /usr
  # ftp http://cdn.netbsd.org/pub/pkgsrc/current/pkgsrc.tar.gz
  # ls /usr/pkgsrc                ... check if exists.
  # tar tzvf pkgsrc.tar.gz |head  ... check the archive
  # tar xzvf pkgsrc.tar.gz        ... extract
  # ls /usr/pkgsrc                ... check what extracted
  # pkg_chk -g                    ... List to/usr/pkgsrc/pkgchk.conf
  # (cd /usr/pkgsrc;cvs update -PAd) ... update
  # pkg_chk -un                   ... Update (listup)
  # pkg_chk -u                    ... Update

EEPROM verson:
 Check&update with Raspberry Pi OS (pi:raspberry)
 pi@raspberrypi:~ $ cat /etc/default/rpi-eeprom-update 
 FIRMWARE_RELEASE_STATUS="stable"
 pi@raspberrypi:~ $ sudo rpi-eeprom-update
 BCM2711 detected
 Dedicated VL805 EEPROM detected
 BOOTLOADER: up-to-date
 CURRENT: Thu 16 Jul 15:15:46 UTC 2020 (1594912546)
 LATEST: Thu 16 Jul 15:15:46 UTC 2020 (1594912546)
 FW DIR: /lib/firmware/raspberrypi/bootloader/stable
 VL805: up-to-date
 CURRENT: 000138a1
 LATEST: 000138a1

--
Jun Ebihara
